// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render the heading 1`] = `
<div>
  <h1>
    Heading
  </h1>
</div>
`;

exports[`<Heading /> should render the heading text 1`] = `
<h2
  class="text-black text-[1.75rem] font-bold"
>
   
  text
</h2>
`;

exports[`<Heading /> should render the small heading text 1`] = `
<h2
  class="text-black text-[1.375rem] font-bold"
>
   
  text
</h2>
`;
